MacPorts: Fix debug build of JavaScriptCore by adding missing include

https://bugs.webkit.org/show_bug.cgi?id=153138

Signed-off-by: Jeremy Huddleston Sequoia <jeremyhu@apple.com>